.provarCaches/00D5h000009Q6XQEA0/objects/provar__Sprint_Issue__c.object
<CustomObject>
    <fields>
        <fullName>provar__Issue__c</fullName>
        <label>Issue</label>
        <referenceTo>provar__Issue__c</referenceTo>
        <relationshipLabel>Related Sprints</relationshipLabel>
        <relationshipName>Sprint_Issues</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>provar__Sprint__c</fullName>
        <label>Sprint</label>
        <referenceTo>provar__Sprint__c</referenceTo>
        <relationshipLabel>Issues in the Sprint</relationshipLabel>
        <relationshipName>Sprint_Issues</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>provar__Status_Is_Done__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Status Is Done</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>provar__Status_Is_In_Progress__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Status Is In Progress</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>provar__Status_Is_Not_Started__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Status Is Not Started</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>provar__Status__c</fullName>
        <label>Status</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <label>Sprint Issue</label>
    <nameField>
        <displayFormat>SPI-{000000}</displayFormat>
        <label>Sprint Issue Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Sprint Issues</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>